--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Progress Tracker</title>
-    <link rel="stylesheet" href="../src/styles.scss" />
 </head>
 
 <body>
-    <div id="app">
-        <h1>Gamified Progress Tracker</h1>
-        <div id="branches"></div>
-    </div>
-    <script type="module" src="../src/main.ts"></script>
+    <div id="root"></div>
 </body>
 
 </html>
